# big_dataworks_databend_risingwave

./: .gitignore
calculator/: README.md  package.json  pnpm-lock.yaml  run.js  run.md  tailwind.config.js
calculator/src/: App.tsx
calculator/src/components/: DataBendCalculator.tsx  DatabendCalculator.css  StarRating.css  StarRating.tsx
go_databend_risingwave/: README.md  docker-compose.yml
go_databend_risingwave/my-go-data-generator/: .env1  README.md  go.mod  go.sum  passwd.md  prompt.md  run.sql
go_databend_risingwave/my-go-data-generator/cmd/: main.go
go_databend_risingwave/my-go-data-generator/internal/csv/: writer.go
go_databend_risingwave/my-go-data-generator/internal/db/: connection.go  migrate.go
go_databend_risingwave/my-go-data-generator/internal/generator/: generator.go
go_databend_risingwave/my-go-data-generator/internal/models/: order.go  product.go  user.go
rust_databend_risingwave/: .gitignore  Cargo.toml  README.md  diesel.toml
rust_databend_risingwave/migrations/20230420000000_create_users/: up.sql
rust_databend_risingwave/migrations/20230420000001_create_products/: up.sql
rust_databend_risingwave/migrations/20230420000002_create_orders/: up.sql
rust_databend_risingwave/src/: main.rs  schema.rs
rust_databend_risingwave/src/db/: mod.rs
rust_databend_risingwave/src/generators/: mod.rs  order_generator.rs  product_generator.rs  user_generator.rs
rust_databend_risingwave/src/models/: order.rs  product.rs  user.rs
