[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres","mysql", "chrono"] }
fake = { version = "4", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
diesel = { version = "2.1.0", features = ["mysql", "postgres", "chrono","numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }